--- a/url/Cargo.toml
+++ b/url/Cargo.toml
@@ -20,6 +20,7 @@ rust-version = "1.56"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bencher = "0.1"
+libtest-mimic = "0.7.3"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
 wasm-bindgen-test = "0.3"
